[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hassfeld"
version = "0.3.13-alpha2"
description = "Integration of Raumfeld into Home Assistant"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "async_upnp_client>=0.27",
    "requests",
    "xmltodict",
]
readme = "README.md"
license = "GPL-3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/B5r1oJ0A9G/hassfeld"
Issues = "https://github.com/B5r1oJ0A9G/hassfeld/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
